tests/errors/regex-bad-count-modifier/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0008]: Invalid regular expression count modifier.
  │
2 │ def main = `digit{2,1}`
  │             ^^^^^^^^^^
  ╰─𜱶 tests/errors/regex-bad-count-modifier/main.pa:2:13
